# FragmentRetro

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  paroutes_n1_solve.py  paroutes_n5_solve.py  pyproject.toml
.github/workflows/: tests.yml
FragmentRetro/: fragmenter.py  retrosynthesis.py  substructure_matcher.py  type_definitions.py
FragmentRetro/fragmenter/: index.html
FragmentRetro/fragmenter-base/: index.html
FragmentRetro/retrosynthesis/: index.html
FragmentRetro/solutions/: index.html
FragmentRetro/substructure-matcher/: index.html
FragmentRetro/typing/: index.html
FragmentRetro/utils/filter-compound/: index.html
FragmentRetro/utils/helper/: index.html
app/interface/: index.html
app/tutorial/: index.html
data/: process_buyables.py  process_eMolecules.py  process_stock.py
data/paroutes/: n1-stock.txt  n1-targets.txt  n5-stock.txt  n5-targets.txt
data/uspto_190/: uspto_190.txt
dev/TODO/: index.html
dev/introduction/: index.html
dev/logging/: index.html
dev/mkdocs/: index.html
docs/: TODO.md  index.md  logging.md
docs/FragmentRetro/: fragmenter-base.md  fragmenter.md  retrosynthesis.md  solutions.md  substructure-matcher.md  type-definition.md  typing.md
docs/FragmentRetro/utils/: filter-compound.md  helper.md  type-definition.md
docs/app/: interface.md  tutorial.md
docs/dev/: introduction.md  logging.md  mkdocs.md
docs/stylesheets/: extra.css
scripts/: paroutes_example.py
search/: search_index.json
src/FragmentRetro/: __init__.py  fragmenter.py  fragmenter_base.py  helpers.py  logging_config.py  retrosynthesis.py  solutions.py  substructure_matcher.py  type_definitions.py
src/FragmentRetro/app/: gui.py
src/FragmentRetro/utils/: filter_compound.py  helpers.py  logging_config.py  type_definitions.py
src/app/: __init__.py  gui.py  interface.py  logging_config.py  state.py
src/app/gui/: controller.py  layout.py  widgets.py
src/fragmentation/: rBRICS.py
src/fragmentretro/: __init__.py  exceptions.py  fragmenter.py  fragmenter_base.py  retrosynthesis.py  solutions.py  substructure_matcher.py  typing.py
src/fragmentretro/app/: interface.py
src/fragmentretro/app/gui/: controller.py  layout.py  state.py
src/fragmentretro/fragmentation/: r_brics.py
src/fragmentretro/utils/: filter_compound.py  logging_config.py  type_definitions.py
tests/: __init__.py  test_compound_filter 2.py  test_compound_filter.py  test_fragmenter.py  test_solutions.py  test_substructure_matcher.py
