[project]
name = "fragmentretro"
version = "0.0.1"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "numpy==1.26.4",
    "rdkit==2023.9.3",
    "tqdm==4.67.1",
    "networkx==3.4.2",
    "matplotlib==3.10.0",
    "typing-extensions==4.12.2",
    "tomli>=2.2.1",
    "ipywidgets==8.1.6",
    "ipykernel>=6.29.5",
]
authors = [
    { name = "Yu Shee", email = "yu.shee@yale.edu" },
    { name = "Anton Morgunov", email = "anton@ischemist.com" },
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/randyshee/FragmentRetro"
Issues = "https://github.com/randyshee/FragmentRetro/issues"


[tool.setuptools]
package-dir = { "" = "src" }



[project.optional-dependencies]
dev = [
    "mkdocs==1.6.1",
    "mkdocstrings-python==1.12.2",
    "mkdocs-material==9.5.49",
    "pytest==8.3.4",
    "ruff==0.4.7",
    "mypy==1.13.0",
    "isort==5.13.2",
    "mypy-extensions==1.0.0",
    "pre-commit==4.0.1"
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["tests", "src/fragmentation/r_brics.py"]
disable_error_code = ["unused-ignore"]

[[tool.mypy.overrides]]
module = ["rdkit-stubs.*", "rdkit.*"]
ignore_errors = true

[tool.ruff]
line-length = 120
lint.select = [
#     "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
lint.ignore = [
    "E501",   # o respect fmt off blocks
    "SIM108", # disagree w/ https://docs.astral.sh/ruff/rules/if-else-block-instead-of-if-exp/
]
exclude = ["tests"]